--- a/index.html
+++ b/index.html
@@ -9,33 +9,18 @@
         <title>Golf Scorecard</title>
     </head>
     <body>
-        <div class="main">
-            <div class="course-select-container">
+        <div class="main" id="main">
+            <div class="course-select-container" id="select-a-course">
                 <div class="title"><h2>Choose a Golf Course!!</h2></div>
                 <div class="courses" id="course-select"></div>
             </div>
-            <!-- <div class="container">
-                <div class="row">
-                    <div class="col-lg-12" id="header"></div>
+            <div class="selected-course" id="course-is-selected">
+                <div class="title"><h2>Let's Play Some Golf</h2></div>
+                <div class="table-responsive-lg">
+                    <table class="table table-remove-border" id="builder-container"></table>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div id="options-container"></div>
-                    </div>
-                </div>
-                <div class="row" id="scorecard-container">
-                    <div class="col-lg-12" id="scorecard">
-                        <div class="table-responsive">
-                            <table class="table table-bordered">
-                            </table>
-                        </div>
-                        <div class="table-responsive">
-                            <table class="table table-bordered">
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+            </div>
+            <span id="render-buttons"></span>;
         </div>
 
         <script src="./script/main.js"></script>
