Full functionality implemented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <table class="table table-remove-border" id="builder-container"></table>
                 </div>
             </div>
-            <span id="render-buttons"></span>;
+            <span id="render-buttons"></span>
         </div>
 
         <script src="./script/main.js"></script>
