final styling changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="courses" id="course-select"></div>
             </div>
             <div class="selected-course" id="course-is-selected">
-                <div class="title"><h2>Let's Play Some Golf</h2></div>
+                <div class="selected-course-title"><h2 id="scorecard-title">Let's Play Some Golf</h2></div>
                 <div class="table-responsive-lg">
                     <table class="table table-remove-border" id="builder-container"></table>
                 </div>
